finish migraiton to junit5